# Todo-list-cpp

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: classes.hpp  todoapp.hpp
scripts/: build.sh
src/: main.cpp
src/commands/: add_command.cpp  help_command.cpp  list_command.cpp  login_command.cpp
src/shell/: shell.cpp
